src/objects/Detox_Treatment__c.object
<CustomObject>
    <fields>
        <fullName>Community_Detox_Doctor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Community Detox Doctor</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Detox Treatments - Community Detox Doctor</relationshipLabel>
        <relationshipName>Detox_Treatments1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_for_prep_stage__c</fullName>
        <label>Date for prep stage</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_when_disengagement_occurred__c</fullName>
        <label>Date when disengagement occurred</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_which_detoxification_began__c</fullName>
        <label>Date which detoxification began</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Detox_Client__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Detox Client</label>
        <referenceTo>Detox_Client__c</referenceTo>
        <relationshipLabel>Detox Treatments</relationshipLabel>
        <relationshipName>Detox_Treatments</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Detoxing_from__c</fullName>
        <label>Detoxing from</label>
        <picklist>
            <picklistValues>
                <fullName>Methadone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benzodiazapeines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z-Hypnotics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Codeine</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Has_aftercare_been_agreed__c</fullName>
        <label>Has aftercare been agreed</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Has_doctor_guaranteed_user_meets_reqs__c</fullName>
        <inlineHelpText>Has the agreed community detox doctor guaranteed that the service user meets the required mental and physical health requirements?</inlineHelpText>
        <label>Has doctor guaranteed user meets reqs</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Has_the_service_user_had_to_increase_the__c</fullName>
        <inlineHelpText>Has the service user had to increase their dosage amount</inlineHelpText>
        <label>Has user had to increase dosage amount</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Has_user_needed_to_change_detox_schedule__c</fullName>
        <inlineHelpText>Has the service user needed to change detoxification schedule</inlineHelpText>
        <label>Has user needed to change detox schedule</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>If_other_issue_for_postponing_specify__c</fullName>
        <label>If other issue for postponing, specify</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_other_issue_please_specify__c</fullName>
        <label>If other issue, please specify</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_other_please_explain__c</fullName>
        <label>If other, please explain</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>If_the_detox_was_postponed_state_why__c</fullName>
        <inlineHelpText>If the detox was postponed please state the reason why</inlineHelpText>
        <label>If the detox was postponed state why</label>
        <picklist>
            <picklistValues>
                <fullName>The doctor advised to stop the detox</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mental health concerns were emerging</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Using heroin and stopped</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other drug (not benzos) had to stop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Under the influence at meetings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missing key working appointments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Was missing medical appointments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Was drinking heavily and had to stop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High dose of street benzo, had to stop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other (health, housing, family)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>If_the_person_did_not_begin_the_detox_w__c</fullName>
        <inlineHelpText>If the person did not begin the detox, why not</inlineHelpText>
        <label>2. If did not begin the detox, why not</label>
        <picklist>
            <picklistValues>
                <fullName>Met criteria, did not wish to continue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Did not meet criteria, not wish to cont</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recommended for inpatient detox</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Could not begin due to other factors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>If_yes_please_give_the_reasons_for_this__c</fullName>
        <label>If yes please give the reasons for this</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>If_yes_please_state_the_reasons_for_this__c</fullName>
        <label>If yes please state the reasons for this</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Issues_preventing_progress__c</fullName>
        <inlineHelpText>What issues are arising for the service user that they are not progressing onto detoxification</inlineHelpText>
        <label>Issues preventing progress</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mental health issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Doctor concerns</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unable to find prescribing doctor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Was still using heroin and stopped</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Was still using other drug, had to stop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Under the influence at meetings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Was missing key working appointments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Was missing medical appointments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Was drinking heavily and had to stop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High dose of street benzo, had to stop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other (health, housing, family)</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Key_Worker__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Key Worker</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Detox Treatments - Key Worker</relationshipLabel>
        <relationshipName>Detox_Treatments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Please_state_which_residential_service_t__c</fullName>
        <inlineHelpText>Please state which residential service the client is going to attend</inlineHelpText>
        <label>Which residential service</label>
        <picklist>
            <picklistValues>
                <fullName>High Park</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>St. Francis Farm</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Stage_community_detoxification_reached__c</fullName>
        <label>Stage community detoxification reached</label>
        <picklist>
            <picklistValues>
                <fullName>Stage 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stage 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stage 3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Weeks_since_prep_for_detox_began__c</fullName>
        <label>Weeks since prep for detox began</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>What_stage_was_the_service_user_at_when__c</fullName>
        <inlineHelpText>What stage was the service user at when they disengaged from community detoxification</inlineHelpText>
        <label>Stage the user at when disengaged</label>
        <picklist>
            <picklistValues>
                <fullName>Preparation for detoxification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Detoxification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disengagement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Re engagement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transition to residential detoxification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed detoxification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aftercare</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Which_schedule_was_chosen_for_this_detox__c</fullName>
        <inlineHelpText>Which schedule was chosen for this detoxification</inlineHelpText>
        <label>Which schedule was chosen for this detox</label>
        <picklist>
            <picklistValues>
                <fullName>Schedule 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Schedule 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Schedule 3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Will_user_remain_with_the_key_worker__c</fullName>
        <inlineHelpText>Will the service user remain with the key worker who they completed community detox with</inlineHelpText>
        <label>Will user remain with the key worker</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X1_The_service_user_disengaged_during__c</fullName>
        <label>1. The service user disengaged during</label>
        <picklist>
            <picklistValues>
                <fullName>Assessment stage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Preparatory stage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Detox stage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aftercare</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Detox Treatment</label>
    <nameField>
        <displayFormat>DT-{000000}</displayFormat>
        <label>Detox Treatment Ref</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Detox Treatments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>